Added env vars for AWS credentials

--- a/.env_example
+++ b/.env_example
@@ -1,6 +1,8 @@
 #!/bin/bash
 
 # AWS
+export AWS_ACCESS_KEY_ID="XXXXXXXXXXXXXXXXXXXX"
+export AWS_SECRET_ACCESS_KEY="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
 export TF_VAR_aws_account_id="XXXXXXXXXXXX"
 export TF_VAR_owner="your.email@example.com"
 
